# riptv

./: Cargo.toml  LICENSE  README.md  install.sh
src/: config.rs  main.rs  player.rs  playlist.rs  ui.rs  utils.rs
