[package]
name = "riptv"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2024"
description = "⚡ Blazing fast IPTV player written in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/riptv"
repository = "https://github.com/yourusername/riptv"
keywords = ["iptv", "media", "player", "streaming", "m3u"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Configuration directory detection
dirs = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI and fuzzy finding
skim = "0.10"

# Progress bars and indicators
indicatif = "0.17"

# Regular expressions
regex = "1.10"

# Fuzzy matching for search
fuzzy-matcher = "0.3"

# URL parsing
url = "2.4"

# Colored terminal output
colored = "2.0"

[target.'cfg(unix)'.dependencies]
# Unix-specific signal handling
nix = "0.27"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
overflow-checks = true

[[bin]]
name = "riptv"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
